# gimpQGIS

./: README.md  pyproject.toml
gimpQGIS/: __init__.py
gimpqgis/: __init__.py
grimpqgis/: QgisGrimpProject.py  QgisGrimpProjectSetup.py  __init__.py
