[tool.poetry]
name = "gimpQGIS"
version = "0.0.1"
description = "SAR processing on the Cloud"
authors = ["Ian Joughin <ian@apl.washington.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fastice/gimpQGIS"
repository = "https://github.com/fastice/gimpQGIS"
keywords = ["SAR", "NSIDC"]

[tool.poetry.dependencies]
progressbar2 = "^3"
# NOTE: qgis not on pypi, just conda-forge
#qgis = { version = "3.18", optional = true }

#[tool.poetry.extras]
#qgis = ["qgis"]

[tool.poetry.dev-dependencies]
ipython = "*"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
