[tool.poetry]
name = "gimpqgis"
version = "0.0.1"
description = "SAR processing on the Cloud"
authors = ["Ian Joughin <ian@apl.washington.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fastice/gimpqgis"
repository = "https://github.com/fastice/gimpqgis"
keywords = ["SAR", "NSIDC", "Holoviz"]

[tool.poetry.dependencies]
python = "^3.8"
progressbar2 = "^3"
numpy = "^1.20.0"
requests = "^2"
# NOTE: qgis not on pypi, just conda-forge
#qgis = { version = "3.18", optional = true }

#[tool.poetry.extras]
#qgis = ["qgis"]

[tool.poetry.dev-dependencies]
ipython = "*"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["setuptools","poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
